<resources>
    <string name="app_name">Alarm Clock Alarmy</string>
    <string name="add_to_photo">Add to Photo</string>
    <string name="save">Save</string>
    <string name="the_kitchen_or_bathroom_works_great">(The kitchen or bathroom works great!)</string>
    <string name="select_a_spot_far_from_your_bed_you_will_snap_to_dismiss_your_alarm">Select a spot far from your bed you will snap to dismiss your alarm.</string>
    <string name="ch_p_nh">Chụp ảnh</string>
    <string name="title_activity_addto_photo">AddtoPhoto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="m_y_nh">Máy ảnh</string>
    <string name="b_s_u_t_p">Bộ sưu tập</string>
    <string name="Back"><![CDATA[<]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_save">Are you sure you want to save?</string>
</resources>